Compact browse results: fix headers, nav row spacing

--- a/styles.css
+++ b/styles.css
@@ -529,6 +529,7 @@ div.patronLogin form label {
  *   Search results: header, navigation row (new search, modify search, etc.)
  * ========================================================================== */
 .navigationRow, .navigationRowRecord { /* nav row classes on result, record pages */
+  margin: 1em 0;
   text-align: center;
 }
 .navigationRow select {
@@ -743,6 +744,16 @@ tr.odd, td.odd { /* table striping */
 /* =============================================================================
  *   Search results: compact display
  * ========================================================================== */
+.browseHeader .browseHeaderData {
+  background: #FFFFFF;
+  font-weight: bold;
+}
+.browseHeader .browseHeaderYear,
+.browseHeader .browseHeaderEntries {
+  text-align: center;
+  width: 7%;
+}
+
 .browseEntry td {
   border-top: 1px solid #CFCFCF;
   padding: 5px 0;
